--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" href="/fav.png" type="image/png" />
     <title>Portfolio</title>
   </head>
   <body>
